--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,6 @@
+[build]
+rustflags = ["--cfg=web_sys_unstable_apis"]
+
 [package]
 name = "prj"
 version = "0.1.0"
@@ -16,14 +19,19 @@ cfg-if = "1"
 env_logger = "0.9"
 log = "0.4"
 iced_winit = { path = "./src/iced-master/winit" }
-iced_wgpu = { path = "./src/iced-master/wgpu", features = ["webgl"]}
+iced_wgpu = { path = "./src/iced-master/wgpu"}
 pollster = "0.2"
 cgmath = "0.18"
 bytemuck = { version = "1.4", features = [ "derive" ] }
 
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+
 console_error_panic_hook = "0.1.6"
 console_log = "0.2.0"
 wasm-bindgen = "0.2.76"
 wasm-bindgen-futures = "0.4"
-web-sys = { version = "0.3", features = ["Element", "HtmlCanvasElement", "Window", "Document"] }
+web-sys = { version = "0.3.58", features = ["Element", "HtmlCanvasElement", "Window", "Document"] }
+
+
+
